# kcd2db

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.agents/skills/nexusmods-release/: SKILL.md
.agents/skills/nexusmods-release/agents/: openai.yaml
.agents/skills/nexusmods-release/references/: nexusmods-api.md
.agents/skills/nexusmods-release/scripts/: collect-release-context.sh
.github/workflows/: publish-nexusmods.yml  release.yml
docs/: cursor-hook.md  cursor-texture-lock.md  fake-db.md
src/: kcd2cursor.cpp  kcd2db.cpp
src/db/: Database.cpp  Database.h  LuaDB.cpp  LuaDB.h
src/game/: GameEnvLocator.cpp  GameEnvLocator.h
src/hooks/: CursorHook.cpp  CursorHook.h
src/kcd2/: CryFixedString.h  CryMemReplay.h  IConsole.h  IGame.h  IGameFramework.h  IScriptSystem.h  ScriptHelpers.h  common.h  console.h  env.h  functor.h  smartptr.h
src/log/: log.cpp  log.h
src/lua/: LuaRunner.cpp  LuaRunner.h  db.h
src/util/: ModuleUtils.cpp  ModuleUtils.h  StringUtils.cpp  StringUtils.h
tools/: package_fake_db_mod.py
